--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,3 +103,14 @@ header {
     font-weight: 300;
     letter-spacing: 2px;
 }
+
+#nav {
+    margin: 0;
+}
+
+/*--------------------------------------------Hover.css*/
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
+}
