--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ header {
     margin: 0;
 }
 
-.heading{
+.heading {
     margin-left: 50px;
 }
 
@@ -84,6 +84,8 @@ header {
     background-size: cover;
     min-height: 360px;
     transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;	
+    -webkit-transition: all .5s ease-in-out;
 }
 
 .name {
@@ -116,8 +118,12 @@ header {
     padding: 0;
 }
 
+#nav {	
+    margin: 0;	
+}	
+
 .menuitem {
-    height:  120px;
+    height: 120px;
     text-align: center;
     padding: 0;
 }
@@ -130,7 +136,7 @@ header {
 }
 
 .menuitem a i {
-    padding-top: 20px;
+    padding-top: 22px;
     display: block;
     color: #fafafa;
     font-size: 26px;
@@ -145,10 +151,6 @@ header {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
-}
-
-#nav {
-    margin: 0;
 }
 
 /*--------------------------------------------Hover.css*/
@@ -173,6 +175,9 @@ footer {
     text-align: center;
     padding-left: 5px;
     transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;	
+    -webkit-transition: all 0.35s ease-in-out;	
+    -o-transition: all 0.35s ease-in-out;
 }
 
 .cv-pdf i:hover {
@@ -194,10 +199,13 @@ footer {
     color: #fafafa;
     background: #8f8f8f;
     transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;	
+    -webkit-transition: all 0.35s ease-in-out;	
+    -o-transition: all 0.35s ease-in-out;
 }
 
 .social-links li a i:hover {
-    background-color: #e84610;
+    background: #e84610;
 }
 
 #footer-details {
@@ -241,11 +249,32 @@ footer {
     vertical-align: top;
 }
 
-.personal-info-item .value p {
+.personal-info-item .key p {
     font-weight: 700;
 }
 
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/* -------------------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {	
+    margin: 40px 20px;	
 }
