--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@
     background-color: #9b59b6;
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -94,6 +98,7 @@ header {
 }
 
 .name {
+    padding-left: 25px;
     font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
@@ -102,6 +107,7 @@ header {
 }
 
 .title {
+    padding-left: 25px;
     font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
@@ -327,4 +333,37 @@ footer {
     border-radius: 12px;
     content: '';
     background: #fafafa;
+}
+
+/* -------------------------------------------------Contact Form */
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/* -------------------------------------------------Media Query */
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
